# rocket-flight-computer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/c-capnproto/: .gitignore  CMakeLists.txt  Makefile
components/c-capnproto/c-capnproto/lib/: capn-malloc.c
components/capnproto/: CMakeLists.txt  Makefile
components/capnproto/capnproto/c++/src/kj/: exception.c++  miniposix.h  mutex.h
components/protobuf/: CMakeLists.txt  Makefile
components/protobuf/include/google/protobuf/stubs/: port.h
components/protobuf/protobuf/: BUILD  configure.ac  logs.pb.h  peripherals.pb.cc  peripherals.pb.h
components/protobuf/protobuf/m4/: ax_pthread.m4
components/protobuf/protobuf/protoc-artifacts/: build-protoc.sh
components/protobuf/protobuf/src/google/protobuf/io/: coded_stream.h
components/protobuf/protobuf/src/google/protobuf/stubs/: common.cc  common.h  port.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  flash-storage.c  flight-computer.c  flight-computer.cpp  imu.c  network.c  time.c
main/models/: log-entry-2.capnp  logs.pb.cc  telemetry.capnp  telemetry.capnp.c  telemetry.capnp.h  telemetry.pb-c.c  telemetry.pb-c.h
models/: logs.proto  peripherals.proto  telemetry.proto
visualizer/: Makefile
visualizer/lib/: libraylib.bc
visualizer/lib/models/: telemetry.pb-c.c  telemetry.pb-c.h
visualizer/src/: buffer.c  circular-buffer.c  main.c  packet.c  serial-interface.c
visualizer/src/drivers/: serial-interface.c
visualizer/src/models/: logs.pb-c.c  logs.pb-c.h  peripherals.pb-c.c  peripherals.pb-c.h
visualizer/src/utils/: serialParser.c
